<resources>
    <string name="app_name">E-commerceApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search_for_products">search for products</string>
    <string name="product_image">Product Image</string>
    <string name="all">all</string>
    <string name="electronics">electronics</string>
    <string name="jewelery">jewelery</string>
    <string name="men_s_clothing">men\'s clothing</string>
    <string name="women_s_clothing">women\'s clothing</string>
    <string name="image_for_cart_product">Image for cart product</string>
    <string name="my_cart_string">My Cart</string>
    <string name="image_for_the_product">image for the product</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
</resources>