<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.zeyadmaamoun.android.e_commerceapp.fragments.home.HomeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/search_for_products"
                android:background="@color/white"/>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/all_categories_chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/electronics_chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/electronics" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/jewelery_chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jewelery" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/mens_clothing_chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/men_s_clothing" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/women_clothing_chip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/women_s_clothing" />

                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:spanCount="2"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    listData="@{viewModel.filteredProducts}"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.search.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/search_for_products"
            app:layout_anchor="@id/search_bar">
            <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
        </com.google.android.material.search.SearchView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>